<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Share your last location!</string>
    <string name="action_settings">Settings</string>
    <string name="latitude_label">Latitude: </string>
    <string name="time_label">I was there at: </string>
    <string name="longitude_label">Longitude: </string>
    <string name="no_location_detected">No Location detected! boo. </string>
    <string name="button_text">Find Last Location</string>
    <string name="displayamessage">Click a button!</string>
    <string name="share">share</string>
    <string name="postMongi">Post to Mongo</string>
    <string name="title_activity_query">Where have your boots been walkin??</string>

    <string name="hello_world">Hello world!</string>


</resources>
